# insperCodeNaPratica

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_db.py  main.py  pyproject.toml  requirements.txt  setup_webhook.py
app/: __init__.py  celery_app.py  config.py
app/api/: health.py  webhooks.py
app/models/: __init__.py  form_response.py
app/services/: __init__.py
app/tasks/: __init__.py  email_sender.py  pdf_generator.py  score_calculator.py
app/utils/: attributes_mapping.py  database.py  tally.py
