[project]
name = "inspercodenapratica"
version = "0.1.0"
description = "NaPratica form event handler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
]
